/*
 * Copyright (c) 2013-2021 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
 * associated documentation files (the "Software"), to deal in the Software without restriction,
 * including without limitation the rights to use, copy, modify, merge, publish, distribute,
 * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all copies or
 * substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
 * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
package eapli.base.infrastructure.persistence;

import eapli.base.agvmanagement.persistence.AGVRepository;
import eapli.base.cartmanagement.persistence.CartRepository;
import eapli.base.customermanagement.repositories.ClientUserRepository;
import eapli.base.customermanagement.repositories.CustomerRepository;
import eapli.base.customermanagement.repositories.SignupRequestRepository;
import eapli.base.ordermanagement.persistence.OrderItemRepository;
import eapli.base.ordermanagement.persistence.OrderRepository;
import eapli.base.productmanagement.persistence.CategoryRepository;
import eapli.base.productmanagement.persistence.ProductRepository;
import eapli.base.questionnairemanagement.persistence.QuestionnaireRepository;
import eapli.base.statistics.persistence.StatisticalReportRepository;
import eapli.base.warehousemanagement.repository.*;
import eapli.framework.domain.repositories.TransactionalContext;
import eapli.framework.infrastructure.authz.domain.repositories.UserRepository;

/**
 * @author Paulo Gandra Sousa
 *
 */
public interface RepositoryFactory {

    /**
     * factory method to create a transactional context to use in the repositories
     *
     * @return
     */
    TransactionalContext newTransactionalContext();

    /**
     *
     * @param autoTx
     *            the transactional context to enrol
     * @return
     */
    UserRepository users(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    UserRepository users();

    ProductRepository products(TransactionalContext autoTx);
    ProductRepository products();

    CategoryRepository categories(TransactionalContext autoTx);
    CategoryRepository categories();

    WarehouseRepository warehouses(TransactionalContext autoTx);
    WarehouseRepository warehouses();

    AisleRepository aisles(TransactionalContext autoTx);
    AisleRepository aisles();

    RowRepository rows(TransactionalContext autoTx);
    RowRepository rows();

    AgvDockRepository agvDocks(TransactionalContext autoTx);
    AgvDockRepository agvDocks();

    AssignmentRepository assignments(TransactionalContext autoTx);
    AssignmentRepository assignments();

    CartRepository cartRepository(TransactionalContext autoTx);
    CartRepository cartRepository();

    OrderRepository orders(TransactionalContext autoTx);
    OrderRepository orders();

    OrderItemRepository orderItems(TransactionalContext autoTx);

    OrderItemRepository orderItems();

    /**
     *
     * @param autoTx
     *            the transactional context to enroll
     * @return
     */
    ClientUserRepository clientUsers(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    ClientUserRepository clientUsers();

    /**
     *
     * @param autoTx
     *            the transactional context to enroll
     * @return
     */
    SignupRequestRepository signupRequests(TransactionalContext autoTx);

    /**
     * repository will be created in auto transaction mode
     *
     * @return
     */
    SignupRequestRepository signupRequests();

    public CustomerRepository customerRepository(TransactionalContext context);
    public CustomerRepository customerRepository();

    public AGVRepository agvRepository(TransactionalContext context);
    public AGVRepository agvRepository();
    public QuestionnaireRepository questionnaireRepository(TransactionalContext context);
    public QuestionnaireRepository questionnaireRepository();
    StatisticalReportRepository statisticalReportRepository(TransactionalContext context);
    StatisticalReportRepository statisticalReportRepository();
}
