package eapli.base.warehousemanagement.repository;

import eapli.base.warehousemanagement.domain.AgvDock.AgvDock;
import eapli.base.warehousemanagement.domain.AgvDock.AgvDockId;
import eapli.framework.domain.repositories.DomainRepository;

public interface AgvDockRepository extends DomainRepository<AgvDockId, AgvDock> {
}
