package eapli.base.warehousemanagement.repository;

import eapli.base.warehousemanagement.domain.Aisle.Aisle;
import eapli.base.warehousemanagement.domain.Aisle.AisleId;
import eapli.framework.domain.repositories.DomainRepository;

public interface AisleRepository extends DomainRepository<AisleId, Aisle> {
}
